# nonogram_solver

./: .gitignore  pyproject.toml
src/: helpers.py  nonogram.py  solving.py
tests/: test_nonogram.py
tests/test_files/: grid_monalisa.csv  grid_monalisa_leeway.csv
