[tool.poetry]
name = "nonogram_solver"
version = "0.1.0"
description = ""
authors = ["RoyS196"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"

[tool.pytest.ini_options]
pythonpath = [".", "src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
